--- a/.snippetsrc
+++ b/.snippetsrc
@@ -51,25 +51,41 @@ if snippetsrcSelfUpdateOnSource; then
     return 0
 fi
 
-# Load aliases from ALIAS file
 loadAliasFile() {
-    local alias_file="${1:-$HOME/ALIAS}"
-    [ ! -f "$alias_file" ] && return 1
+    shopt -s expand_aliases
+    
+    local alias_file=""
+    
+    if [ -f "$HOME/ALIAS" ]; then
+        alias_file="$HOME/ALIAS"
+    elif [ -n "${USER:-}" ] && [ -f "/c/Users/$USER/ALIAS" ]; then
+        alias_file="/c/Users/$USER/ALIAS"
+    elif [ -n "${USERNAME:-}" ] && [ -f "/c/Users/$USERNAME/ALIAS" ]; then
+        alias_file="/c/Users/$USERNAME/ALIAS"
+    else
+        return 1
+    fi
     
     local current_func=""
     while IFS= read -r line || [ -n "$line" ]; do
-        line="${line%%#*}"  # Remove comments
-        line="${line%"${line##*[![:space:]]}"}"  # Trim trailing whitespace
-        [ -z "$line" ] && continue
+        line="${line%%#*}"
+        line="${line#"${line%%[![:space:]]*}"}"
+        line="${line%"${line##*[![:space:]]}"}"
+        
+        [ -z "$line" ] && {
+            current_func=""
+            continue
+        }
         
         if [[ "$line" == *: ]]; then
             current_func="${line%:}"
+            current_func="${current_func%"${current_func##*[![:space:]]}"}"
+            current_func="${current_func#"${current_func%%[![:space:]]*}"}"
         elif [ -n "$current_func" ]; then
             alias "$line"="$current_func"
         fi
     done < "$alias_file"
 }
-loadAliasFile
 
 helloWorld() {
     local user=${USER:-$USERNAME}
@@ -1212,3 +1228,5 @@ gcp() { git add -A && git status; }                       # Git commit preview: 
 gpr() { gh pr create --fill; }                            # GitHub PR: create pull request with auto-filled title/body
 nr() { bun run "$1"; }                                    # Node run: execute a script from package.json using Bun
 #</AGENT_ALIASES>
+
+loadAliasFile
